[gd_scene load_steps=3 format=3 uid="uid://dvbc6kk5nm7p2"]

[ext_resource type="Script" uid="uid://kk77wgyievqj" path="res://src/ui/health_bar/health_bar.gd" id="1_aynkv"]
[ext_resource type="Texture2D" uid="uid://bwoxenfl7uje1" path="res://src/assets/sprites/ui/healthbar-tick.png" id="1_ienf7"]

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 16.0
script = ExtResource("1_aynkv")

[node name="WhiteBorder" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 4.0
offset_bottom = 16.0
scale = Vector2(30, 1)

[node name="ContentBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 6.0
offset_bottom = 14.0
scale = Vector2(29, 1)
color = Color(0.321569, 0.0431373, 0, 1)

[node name="HealthGauge" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 6.0
offset_bottom = 14.0
scale = Vector2(10, 1)
texture = ExtResource("1_ienf7")
